Migrate from RabbitMQ to NATS
- Also add feeder process to produce initial crawl url

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-AMQP_URI=amqp://guest:guest@rabbitmq:5672
-AMQP_PREFETCH=1
+NATS_URI=nats://derek:pass@messaging-server:4222
 TOR_PROXY=tor-proxy:9050
