--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,7 @@ go:
   - 1.13.1
 
 env:
-  - GO111MODULE=off
-
-before_install:
-  - go get -v github.com/nats-io/nats.go/
-  - go get -v github.com/valyala/fasthttp
-  - go get -v golang.org/x/net/proxy
+  - GO111MODULE=on
 
 script:
   - CGO_ENABLED=0 go test -v
